fix missing background color, add BG color + font to body tag

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -14,16 +14,21 @@ html {
  * Global layout stuff
  */
 
+body {
+  background-color:  #f4f1ec;
+  font-family: 'Source Sans Pro', sans-serif;
+
+}
+
 .wrapper {
   display: flex;
   flex-direction: row;
-  font-family: 'Source Sans Pro', sans-serif;
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
-  height: auto;
+  height: 100%;
   margin-top: 5em;
-  padding: 0 2em
+  padding: 0 2em;
 }
 
 .tweet-container {
@@ -38,6 +43,7 @@ html {
     flex-direction: column;
     margin-top: 0;
     padding: 0;
+    font-family: 'Source Sans Pro', sans-serif;
   }
 
   .tweet-container {
